# square_solver

./: CMakeLists.txt  README.md  main.cpp  tests.py
src/: Application.cpp  Application.hpp  PipelineQueue.hpp  Printer.hpp  Producer.hpp  QuadraticEquationSolver.cpp  QuadraticEquationSolver.hpp  Solver.hpp  SortOfLockFreeQueue.hpp  TupleProducer.hpp  main.cpp
tests/: tests.py
